# LLExtTool

./: .gitignore  CMAKE_BUILD.md  CMakeLists.txt  CTRANSLATE2_INSTALL.md  CTRANSLATE2_SETUP.md  DEVELOPMENT.md  DYNAMIC_RELOAD.md  EXAMPLES.md  GPU_ACCELERATION.md  LICENSE  NATIVE_INTEGRATION.md  NLLB_FIX.md  QUICKSTART.md  README.md  SETTINGS_GUIDE.md  TRANSLATION_GUIDE.md  TRANSLATION_INTEGRATION.md  TRANSLATION_ISSUE.md  TRANSLATION_MODELS.md  TRANSLATION_STATUS.md  TROUBLESHOOTING.md  WHISPER_USAGE.md  binding.gyp  build-sentencepiece.ps1  check-dependencies.bat  package.json  run-gpu-test.js  setup.ps1  test-async-load.js  test-bindings.js  test-dll-load.js  test-e2e.js  test-electron-native.js  test-electron-translate.js  test-encoding.js  test-ffmpeg-dlls.js  test-gpu-check.js  test-load-native.js  test-m2m100.js  test-manual-tokens.js  (+16 more)
docs/: BUILD_CTRANSLATE2.md  CTranslate2安装指南.md  便携版打包.md  快速打包.md  打包指南.md  打包错误解决.md  新编辑器说明.md  模型下载界面.md  编辑器问题修复.md  问题修复确认.md  集成CTranslate2翻译.md
native/: CMakeLists.txt  binding.gyp  compile_test.ps1  llvideo.d.ts  llwhisper.d.ts  test_ctranslate2.cpp
native/include/: ffmpeg_wrapper.h  sentencepiece_tokenizer.h  translate_wrapper.h  whisper_wrapper.h
native/src/: ffmpeg_wrapper.cpp  llvideo.cpp  llwhisper.cpp  sentencepiece_tokenizer.cpp  translate_wrapper.cpp  whisper_wrapper.cpp
scripts/: build-ctranslate2.ps1  build-native.js  build.js  convert-translation-model.ps1  download-ffmpeg.ps1  download-model.ps1  download-whisper.ps1  fix-winsign-cache.ps1  install-ctranslate2.ps1  prepare-package.ps1  setup-ctranslate2.js  watch-assets.js
src/main/: config-manager.ts  ipc-handlers.ts  main.ts  model-downloader.ts  native-loader.ts  native-module-cache.ts
src/renderer/: index.html  renderer.ts
src/renderer/styles/: main.css
src/services/: translator.ts
src/shared/: types.ts
